--- a/website/templates/website/menu.html
+++ b/website/templates/website/menu.html
@@ -2,13 +2,13 @@
     <div class="col-12">
         <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Ativo</a>
+                    <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Serviços</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Sobre</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#">Desativado</a>
