--- a/core/templates/core/cadastro_pessoas.html
+++ b/core/templates/core/cadastro_pessoas.html
@@ -10,11 +10,11 @@
                <a class="nav-link" href="{% url 'core_home'%}">Home</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Pessoa</a>
+                <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Pessoa</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{%url 'core_lista_pessoas' %}">Lista de Pessoas</a>
+                    <a class="dropdown-item " href="{%url 'core_lista_pessoas' %}">Lista de Pessoas</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'core_pessoa_nova'%}">Cadastro de Pessoas</a>
+                    <a class="dropdown-item active" href="{% url 'core_pessoa_nova'%}">Cadastro de Pessoas</a>
                 </div>
             </li>
             <li class="nav-item dropdown">    
@@ -42,47 +42,33 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Movimento Mensalistas</a>
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Movimento Mensalistas</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item active" href="{%url 'core_lista_movmensalistas' %}">Lista de Movimento Mensalista</a>
+                    <a class="dropdown-item" href="{%url 'core_lista_movmensalistas' %}">Lista de Movimento Mensalista</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'core_movmensalista_novo'%}">Cadastro de Movimento Mensalista</a>
                 </div>
             </li>
-            
     </div>
 </div>   
 {% endblock %}
 
 {% block main %}
-<div class="row">
-    <div class="col-12">
-        <h2>Lista de MOVIMENTO Mensalistas</h2>
-    </div>
-</div>
-<div class="row">
-    <div class="col-12">
-            <table class="table">
-                    <thead class="thead-dark">
-                      <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Mensalista</th>
-                        <th scope="col">Data de Pagamento</th>
-                        <th scope="col">Total</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {% for mls in movmensalistas %}  
-                      <tr>
-                        <th scope"row"><a href="{% url 'core_movmensalista_update' mls.id %}">{{mls.id}}</a></th>
-                        <td>{{mls.mensalista}}</td>
-                        <td>{{mls.dt_pgto}}</td>
-                        <td>R$ {{mls.total}}</td>
-                      </tr>
-                      {% endfor %}
-                    </tbody>
-            </table>
-    </div>
-</div>
 
+<div class="row">
+    <div class="col-12">
+        <h1>Cadastro de Pessoas</h1> 
+          <form action="{% url   'core_pessoa_nova'  %}" method="POST">
+            {% csrf_token %}
+            
+            {{form|bootstrap_horizontal}}
+    
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+    
+        </form>
+    </div>
+  </div>
+
+    
+    
 {% endblock %}
