--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -14,4 +14,6 @@
 
 {% include 'website/menu.html' %}
 
+    <a href="{% url 'core_home' %}" target="_blank"><strong>LOGIN</strong></a>
+
 {% endblock %}
